my second commit

--- a/public/App.css
+++ b/public/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+.search-bar{
+  margin-top:  50px;
+  margin-bottom:50px;
+}
+li:hover {
+  background-color: cornsilk;
+}
+.title-liste-item{
+  padding-top: 50px;
+  text-align: 50px;
+}
